workshop04/wordpress_db.yaml
---
apiVersion: v1
kind: Namespace
metadata:
   name: wordpress
