workshop04/weather-istio.yaml
kind: ServiceEntry
apiVersion: networking.istio.io/v1alpha3

metadata:
   name: openweathermap
   namespace: weatherns
   labels:
      app.kubernetes.io/name: openweathermap
      app.kubernetes.io/version: "v1"
      app.kubernetes.io/component: service-entry
      app.kubernetes.io/part-of: weatherapp

spec:
   hosts:
   - "api.openweathermap.org"
   ports:
   - number: 80
     name: http
     protocol: HTTP
   location: MESH_EXTERNAL
   resolution: DNS

---
kind: Gateway
apiVersion: networking.istio.io/v1alpha3

metadata:
   name: weather-gw
   namespace: weatherns
   labels:
      app.kubernetes.io/name: weather-gw
      app.kubernetes.io/version: "v1"
      app.kubernetes.io/component: gateway
      app.kubernetes.io/part-of: weatherapp

spec:
   selector:
      istio: ingressgateway

   servers:
   - port: 
      number: 80
      name: http
      protocol: HTTP
     hosts:
     - "*"
     #- weather.139.59.221.78.nip.io

---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3

metadata:
   name: weather-vs
   namespace: weatherns
   labels:
      app.kubernetes.io/name: weather-vs
      app.kubernetes.io/version: "v1"
      app.kubernetes.io/component: virtualservice
      app.kubernetes.io/part-of: weatherapp

spec:
   gateways:
   - weather-gw
   hosts:
   - "*"
   http:
   - match:
     - uri:
        prefix: /
     route:
     - destination:
        host: weather-svc.weatherns.svc.cluster.local
     corsPolicy:
        allowOrigin:
        - "*"
        allowMethods:
        - GET
        - POST
   - route:
     - destination:
        host: weather-svc.weatherns.svc.cluster.local
